css/main.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Lora&display=swap');

body {
    margin: 0;
    padding: 0;
    font-family: 'Alegreya', serif;
    font-weight: 200;
    line-height: 1.5; 
    color: #000000;
    font-size: clamp(1rem, 2vw, 1.1rem);
    background-color: #1E1E1E;
}

*, *::before, *::after {
    box-sizing: border-box;
}

html {
    overflow-x: hidden;
    scroll-behavior: smooth;
}

a { 
    text-decoration: none;
    color: inherit;
}

a:hover {
    color: #B49C73; 
    transition: all 0.3s ease-in-out;
}

h2 {
    font-family: 'Lora', serif;
    color: #B49C73;
}

/* navbar */

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1E1E1E;
    padding: 0 20px;
    height: 80px;
    position: sticky; 
    top: 0;
    z-index: 20; 
}

.navbar-logo {
    margin-top: 5px;
    height: 60px; 
}

.navbar-menu {
    list-style: none;
    display: flex;
    align-items: center;
}

.navbar-menu a {
    font-family: 'Lora', serif;
    letter-spacing: 2px;
    font-weight: 200;
    color: #FFFFFF;
    font-size: clamp(1rem, 2vw, 1.2rem);
    margin: 0 20px;
    position: relative;
    display: inline-block; 
    transition: all 0.5s ease-in-out;
}

.navbar-menu a::after {
    content: '';
    position: absolute;
    width: 0;
    height: 1.5px; 
    bottom: -3px;
    left: 0;
    background-color: #B49C73; 
    visibility: hidden;
    transition: all 0.3s ease-in-out;
    color: #B49C73;
}

.navbar-menu a:hover::after {
    visibility: visible;
    width: 100%;
}

.navbar-menu a:hover {
    color: #B49C73; 
}

.navbar-menu a.active::after {
    visibility: visible;
    width: 100%;
}

.navbar-menu a.active {
    color: #B49C73;
}

.burger-icon {
    margin-top: -7px;
    display: none;
    cursor: pointer;
    position: relative;
}

.burger-icon .line {
    width: 25px;
    height: 3px;
    background-color: #B49C73; 
    margin: 8px 0;
    transition: all 0.3s ease;
}

.navbar-menu {
    display: flex;
}

@media screen and (max-width: 1024px) {
    .navbar-menu {
        list-style: none;
        position: absolute;
        top: 80px;
        right: 0;
        width: 100%;
        height: 95vh;
        background-color: #1E1E1E;
        flex-direction: column;
        align-items: flex-end;
        justify-content: space-evenly;
        transform: translateX(100%);
        transition: transform 0.5s ease, opacity 0.5s ease;
        opacity: 0;
        display: none;
    }
    
    .navbar-menu a:hover::after {
        visibility: hidden;
    }

    .burger-icon {
        display: block;
        position: absolute;
        top: 25px; 
        right: 20px; 
    }

    .navbar-menu.active {
        transform: translateX(0);
        opacity: 0.95;
        display: flex;
        flex-direction: column;
        z-index: 3;
    }

    .navbar-logo {
        position: absolute; 
        top: 10px; 
        left: 10px; 
        margin: 0; 
    } 
    
    .burger-icon.toggle .line:nth-child(1) {
        transform: rotate(45deg) translate(8px, 10px);
    }
    
    .burger-icon.toggle .line:nth-child(2) {
        opacity: 0;
    }
    
    .burger-icon.toggle .line:nth-child(3) {
        transform: rotate(-45deg) translate(6px, -7px);
    }
}

@media screen and (max-width: 769px) {
    .navbar-menu{
        height: 92vh;
    } 
} 

#languageSwitcher {
    cursor: pointer;
    margin: 0 0 0 30px;
    transition: opacity 0.3s ease; 
    margin: 0 0 0 30px;
}

@media screen and (max-width: 1024px) { 
    #languageSwitcher {
        margin: 0 30px;
    }
}

#languageSwitcher:hover {
    opacity: 0.7; 
}

#languageSwitcher img {
    height: 2.5rem; 
    width: auto;
    border-radius: 3px;
}

#enFlag {
    display: none;
}

/* header */

.text-wrapper, .title-wrapper  {
    width: 80%; 
    margin: auto; 
    color: #FFFFFF;
}

.title-wrapper h1 {
    font-family: 'Lora', serif;
    letter-spacing: 1px;
    font-weight: 600;
    color: #B49C73;
}

.text-wrapper h2 {
    font-size: 1.4rem;
    letter-spacing: 1px;
}

.text-wrapper h3 {
    font-family: 'Lora', serif;
    font-size: clamp(1.1rem, 2vw, 1.2rem);
    letter-spacing: 1px;
    color :#B49C73;
}

.text-wrapper ul {
    list-style-type: none; 
    padding-left: 10px;
}

.text-wrapper ul li {
    position: relative;
    padding-left: 20px; 
}

.text-wrapper ul li::before {
    content: '\2022'; 
    color: #B49C73; 
    font-size: 20px;
    position: absolute;
    left: 0; 
    top: -4px; 
}

.text-wrapper ol {
    list-style-type: none;
    padding-left: 10px;
}

.text-wrapper ol li {
    position: relative;
    padding-left: 30px;
    counter-increment: item; 
}

.text-wrapper ol li::before {
    content: counter(item) '. ';
    color: #B49C73;
    font-size: 20px;
    position: absolute;
    left: 0;
    top: -4px; 
}

@media (max-width: 768px) { 
    .title-wrapper h1 {
        font-size: 1.5rem;
    }
    .text-wrapper h2 {
        font-size: 1.15rem;
    }
    
}

/* contacts; footer */

.contactActions-wrapper {
    position: fixed; 
    right: 20px; 
    bottom: 90px; 
    width: auto; 
    z-index: 10; 
}

#contactActions {
    transition: all 0.3s ease-in-out, opacity 0.3s; 
    animation: pulse 2.5s infinite; 
}

@keyframes pulse {
    0% {
        transform: scale(1);
        opacity: 1;
    }
    50% {
        transform: scale(1.2);
        opacity: 0.7;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

#contactActions:hover {
    animation: none;
    transform: scale(1.2); 
}


.toTopButton-wrapper {
    position: fixed; 
    right: 20px; 
    bottom: 20px; 
    width: auto; 
    z-index: 10; 
}

#toTopButton {
    width: 45px;
    cursor: pointer;
}

#toTopButton:hover {
    opacity: 0.7;
    transition: all 0.3s ease-in-out;
}

#contact, footer {
    padding: 20px;
    margin: auto;
    width: 90%;
}

.wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
}

@media (max-width: 820px) {
    .grid-wrapper {
        flex-direction: column;
        align-items: flex-start;
    }
}

footer {
    font-size: clamp(0.7rem, 2vw, 0.8rem);
}

.footer-about {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.footer-nav {
    width: 100%;
    display: flex;
    justify-content:flex-end;
    align-items: center;
}

.footer-nav a {
    margin: 0 20px;
}

.footer-logo {
    width: 10rem;
    height: auto;
    vertical-align: middle;
}

@media (max-width: 768px) {
    .footer-logo {
        width: 5.5rem;
        height: auto;
    }
    .footer-nav {
        margin-right: 5px;
    }
    .footer-nav a{
        margin: 0 5px;
    }
    .contactActions-wrapper {
        bottom: 70px; 
        right: 5px; 
    }
    .toTopButton-wrapper {
        right: 5px; 
        bottom: 10px;
    }
    #toTopButton {
        width: 40px;
    }
    #contactActions {
        width: 40px;
    }
}

.creator-wrapper {
    display: flex;
    justify-content: center;
    letter-spacing: 1px;
    font-size: 0.7rem;
}

.creator-wrapper p {
    color: #B49C73;
    font-size: 0.7rem;
}

.creator-wrapper a {
    color: #b4ab9a;
    position: relative;
    display: inline-block; 
    transition: all 0.5s ease-in-out;
    font-size: 0.7rem;
}

.creator-wrapper a::after {
    content: '';
    position: absolute;
    width: 0;
    height: 0.5px; 
    bottom: -3px;
    left: 0;
    background-color: #FFFFFF; 
    visibility: hidden;
    transition: all 0.3s ease-in-out;
}

.creator-wrapper a:hover::after {
    visibility: visible;
    width: 100%;
}

.creator-wrapper a:hover {
    color: #FFFFFF;
}

.creator-wrapper a.active::after {
    visibility: visible;
    width: 100%;
}

@media (max-width: 768px) { 
    .creator-wrapper {
        letter-spacing: 1px;
    }
    .creator-wrapper p,
    .creator-wrapper a {
        font-size: 0.6rem;
    }
    .creator-wrapper a:hover::after {
        visibility: hidden;
    }
}

